<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5FFC9"
    android:backgroundTint="#D5FFC9"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/WelcomeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <VideoView
        android:id="@+id/HelloGif"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/tododo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeTitle" />

    <Button
        android:id="@+id/learnASL"
        android:layout_width="185dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonrounding"
        android:backgroundTint="#FFFFFF"
        android:drawableTop="@android:drawable/btn_star_big_on"
        android:elevation="4dp"
        android:onClick="learnASL"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp"
        android:text="@string/learn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#888888"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dictionary"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelloGif"
        app:layout_constraintVertical_bias="0.011" />

    <Button
        android:id="@+id/dictionary"
        android:layout_width="185dp"
        android:layout_height="170dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonrounding"
        android:backgroundTint="#FFFFFF"
        android:drawableTop="@android:drawable/ic_menu_gallery"
        android:elevation="4dp"
        android:onClick="ASLDictionary"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp"
        android:text="@string/dictionary"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#888888"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelloGif"
        app:layout_constraintVertical_bias="0.011" />

    <Button
        android:id="@+id/progress"
        android:layout_width="185dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonrounding"
        android:backgroundTint="#FFFFFF"
        android:drawableTop="@android:drawable/btn_radio"
        android:elevation="4dp"
        android:onClick="myProgress"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp"
        android:text="@string/progress"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#888888"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learnASL"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/free_style"
        android:layout_width="185dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonrounding"
        android:backgroundTint="#FFFFFF"
        android:drawableTop="@android:drawable/ic_delete"
        android:elevation="4dp"
        android:onClick="freeStyle"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp"
        android:text="@string/freestyle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#888888"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dictionary"
        app:layout_constraintVertical_bias="0.1" />


</android.support.constraint.ConstraintLayout>